# IEEE-SB-SETUP

./: .gitignore  .gitignore~  README  README.markdown  README.md  README~  WarBots-Setup  WarBots-Setup.markdown  WarBots-Setup~
WarBots/Box2D_v2.2.1/HelloWorld/: CMakeCache.txt  HelloWorld  Makefile  a.out  cmake_install.cmake
WarBots/Box2D_v2.2.1/freeglut/: freeglut_internal.h
WarBots/libbats-2.0.1/: Makefile.am  Makefile.in  configure  configure.in
WarBots/libbats-2.0.1/AST/: ast.hh
WarBots/libbats-2.0.1/AgentModel/: agentmodel.hh  getBodyCopy.cc  getBodyPartCopy.cc  initBody.cc  initBody2.cc  update.cc  updatePosture.cc
WarBots/libbats-2.0.1/BatsEvent/: batsevent.hh
WarBots/libbats-2.0.1/Behavior/: Behavior.cc  achieveGoal.cc  behavior.hh  buildTree.cc  createBehaviors.cc  doCurrentStep.cc  reset.cc  static.cc
WarBots/libbats-2.0.1/BehaviorFactory/: behaviorfactory.hh  createBehavior.cc
WarBots/libbats-2.0.1/Cerebellum/: outputCommands.cc
WarBots/libbats-2.0.1/Clock/: clock.hh
WarBots/libbats-2.0.1/Cochlea/: Cochlea.cc  cochlea.hh  cochlea.ih  getfrompid.cc  integrate.cc  translateInfo.cc
WarBots/libbats-2.0.1/Conf/: conf.hh  xmlnode.hh
WarBots/libbats-2.0.1/Distribution/: distribution.hh
WarBots/libbats-2.0.1/Hashclasses/: hashclasses.hh
WarBots/libbats-2.0.1/HumanoidAgent/: humanoidagent.hh  humanoidagent.ih  run.cc  startUp.cc
WarBots/libbats-2.0.1/Localizer/: localizer.hh
WarBots/libbats-2.0.1/examples/helloworld/: Makefile.am  Makefile.in
WarBots/libbats-2.0.1/examples/helloworld/HelloWorldAgent/: helloworldagent.hh  think.cc
(+81 files in other folders)
